--- a/app/assets/stylesheets/partials/_pending-parents.scss
+++ b/app/assets/stylesheets/partials/_pending-parents.scss
@@ -10,13 +10,13 @@
     width: 15%;
   }
   li:nth-child(3) {
-    width: 25% !important;
+    width: 20% !important;
   }
   li:nth-child(4) {
     width: 30% !important;
   }
   li:nth-child(5) {
-    width: 15% !important;
+    width: 20% !important;
   }
   div.panel-heading {
     display: flex;
